# web_store

./: .env.sample  .gitignore  catalog_v2_fixture.json  catalog_v3_fixture.json  category_fixture.json  lint_add.cmd  post_fixture.json  product_fixture.json  pyproject.toml  readme.md  user_fixture.json
blog/: admin.py  apps.py  models.py  urls.py  views.py
blog/management/commands/: add_blog.py
blog/migrations/: 0001_initial.py  0002_alter_post_preview.py  0003_alter_post_views_count.py  0003_post_slug.py  0004_alter_post_slug.py  0004_post_slug.py  0005_alter_post_slug.py  0006_alter_post_views_count.py  0007_job.py  0008_job_interval.py  0009_cronjob.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  posts_list.html  posts_list2.html  product_detail.html
catalog/: admin.py  form.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_catalog.py  shell_cmd.txt
catalog/migrations/: 0001_initial.py  0002_alter_product_photo.py  0003_alter_product_options_product_allowed_publication.py  0004_product_owners.py
catalog/templates/: contact.html  home.html  send.html
catalog/templates/catalog/: add_product.html  base.html  category_confirm_delete.html  category_form.html  categoryes_list.html  contact.html  home.html  page_nav.html  pagination.html  product_confirm_delete.html  product_detail.html  product_detail_mod.html  (+4 more)
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_country.py  0003_alter_customuser_avatar.py
(+10 files in other folders)
